--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
           </div>
 
         </div>
-        <div class="offset-1 col-md-4">
+        <div class="col-md-1"></div>
+        <div class="col-md-4">
           <!--right side-->
           <div class="banner-form">
             <form>
@@ -182,18 +183,19 @@ bibendum laoreet.</p>
 
 <!--sub list section start-->
 
-<section>
+<section class="feature">
   <div class="sub-list">
     <div class="container">
       <div class="row">
         <!--left-->
-        <div class="col-md-6">
+        <div class="col-md-6 feature-img">
           <img src="img/three.png" class="img-fluid">
         </div>
 
 
         <!--right-->
-        <div class="offset-1 col-md-5">
+        <div class="col-md-1"></div>
+        <div class="col-md-5">
          <div class="sub-list-text">
             <h3>Sub list section</h3>
             <div class="line"></div>
@@ -255,8 +257,9 @@ natoque penatibus et magnis dis parturient montes.<br><br>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean euismod <br> bibendum laoreet.</p>
         </div>
       </div>
+      <div class="col-md-1"></div>
 
-      <div class="offset-1 col-md-5">
+      <div class="col-md-5">
         <img src="img/three.png" class="img-fluid">
       </div>
     </div>
